--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
     "@zeit/next-typescript": "1.1.0",
     "next": "^6.1.1",
     "react": "^16.4.2",
