--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
+    "@material/drawer": "^0.41.0",
     "@zeit/next-typescript": "1.1.0",
     "next": "^6.1.1",
     "react": "^16.4.2",
