--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@material-ui/icons": "^3.0.1",
     "@material/drawer": "^0.41.0",
     "@zeit/next-typescript": "1.1.0",
+    "match-sorter": "^2.3.0",
     "next": "^6.1.1",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-table": "^6.8.6"
   },
   "devDependencies": {
     "@types/next": "latest",
