--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
     "@material/drawer": "^0.41.0",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "1.1.0",
     "match-sorter": "^2.3.0",
-    "next": "^6.1.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "next": "^6.1.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-table": "^6.8.6"
   },
   "devDependencies": {
