--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "build": "next build",
     "start": "next start"
   },
+  "main": "index.js",
   "dependencies": {
-    "@material-ui/core": "^3.0.2",
+    "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
-    "@material/drawer": "^0.41.0",
+    "@material/drawer": "^0.41.1",
     "@zeit/next-css": "^1.0.1",
-    "@zeit/next-typescript": "1.1.0",
+    "@zeit/next-typescript": "^1.1.1",
     "match-sorter": "^2.3.0",
-    "next": "^6.1.2",
+    "namor": "^1.1.1",
+    "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-filterable-table": "^0.3.432",
+    "react-jss": "^8.6.1",
     "react-table": "^6.8.6"
   },
   "devDependencies": {
     "@types/next": "latest",
-    "@types/react": "^16.0.36"
+    "@types/react": "^16.7.18"
   },
   "license": "ISC"
 }
